# indexed_arena

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs
tests/: test.rs
