[package]
name = "indexed_arena"
description = "A simple, index-based arena without deletion."
version = "0.4.2"
edition = "2024"
authors = ["ryota2357"]
repository = "https://github.com/ryota2357/indexed_arena"
readme = "README.md"
license = "MIT"
keywords = ["arena"]
categories = ["data-structures", "no-std"]
